--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -28,6 +28,9 @@ body {
 section{
     text-align: center;
     margin: 100px 0px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 article {
     width: 300px;
@@ -87,4 +90,13 @@ footer {
     margin: 0px;
     padding: 20px;
     border: 0px;
+}
+
+@media screen and (max-width: 700px) {
+    section {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-content: center;
+    }
 }
